# agate

./: .gitignore  .travis.yml  Agate.includes  CMakeLists.txt  CppProperties.json  README.md  autogen.sh  configure1  configure2  file2obj.cpp  generate.sh  icons.qrc
FINDSYM/: findsym
OSX/: AbiOut.dmg  abiout.port
Win_x86/: AbiOutNSIS.txt
cmake/: FindReadline.cmake  agateConfig.cmake.in
doc/: Doxyfile.in  Makefile.am  Makefile.in
icons/: icons.xcf
include/: CMakeLists.txt  getoptwin32.h
include/base/: CMakeLists.txt  eigen.hpp  energyunit.hpp  exception.hpp  fraction.hpp  geometry.hpp  mendeleev.hpp  phys.hpp  sftp.hpp  ssh.hpp  typename.hpp  unitconverter.hpp  uriparser.hpp  utils.hpp  win32.hpp
include/bind/: CMakeLists.txt  findsym.hpp  tdep.hpp
include/canvas/: CMakeLists.txt  canvas.hpp  canvasdensity.hpp  canvaslocal.hpp  canvasphonons.hpp  canvaspos.hpp  canvasrot.hpp
include/conducti/: CMakeLists.txt  abiopt.hpp  conducti.hpp
include/graphism/: CMakeLists.txt  buffer.hpp  buffer.hxx  imagesaver.hpp  render.hpp  textrender.hpp  triarrow.hpp  tricloud.hpp  tricube.hpp  tricylinder.hpp  trimap.hpp  triobj.hpp  trisphere.hpp
include/hist/: .histdata.hpp.swp  CMakeLists.txt  histcustommodes.hpp  histdata.hpp  histdatadtset.hpp  histdatagsr.hpp  histdataheff.hpp  histdatamd.hpp  histdatanc.hpp  histdataoutnc.hpp  histdatapolydtset.hpp  histdataxyz.hpp  multibinit.hpp  vaspxml.hpp
include/io/: CMakeLists.txt  abibin.hpp  abihdr.hpp  cifparser.hpp  configparser.hpp  configparser.hxx  ddb.hpp  ddbabinit.hpp  ddboutcar.hpp  ddbphonopy.hpp  dtset.hpp  eigparser.hpp  eigparsereig.hpp  eigparserelectrons.hpp  eigparserfatbands.hpp  eigparsergsr.hpp  eigparserphbst.hpp  eigparserphfrq.hpp  eigparserphonons.hpp  eigparserphonopy.hpp  electrondos.hpp  etsfnc.hpp  outcar.hpp  parser.hpp  parser.hxx  phonopydtset.hpp  poscar.hpp  procar.hpp  yaml.hpp
include/phonons/: CMakeLists.txt  dispdb.hpp  phononmode.hpp  supercell.hpp
include/plot/: CMakeLists.txt  dosdb.hpp  gnuplot.hpp  graph.hpp
include/qtgui/: atomselector.hpp  dialog.h  glwidget.hpp  planselector.hpp  plotbar.hpp  qplot.hpp  tabcanvaspos.hpp  tabnavtools.hpp  tabwingl.hpp  timeline.hpp  viewbar.hpp  winqt.hpp
include/shape/: CMakeLists.txt  octaangles.hpp  octahedra.hpp  octalengths.hpp
include/window/: CMakeLists.txt  window.hpp  winfake.hpp  winglfw2.hpp  winglfw3.hpp
m4/: autotroll.m4  autotroll.mk  ax_check_zlib.m4
src/: CMakeLists.txt  getoptwin32.c
src/base/: CMakeLists.txt  energyunit.cpp  exception.cpp  fraction.cpp  geometry.cpp  mendeleev.cpp  phys.cpp  sftp.cpp  ssh.cpp  unitconverter.cpp  uriparser.cpp  utils.cpp
src/bind/: CMakeLists.txt  findsym.cpp  snake.cpp  tdep.cpp
src/canvas/: CMakeLists.txt  canvas.cpp  canvasdensity.cpp  canvaslocal.cpp  canvasphonons.cpp  canvaspos.cpp  canvasrot.cpp
src/conducti/: .conducti.cpp.swp  CMakeLists.txt  abiopt.cpp  conducti.cpp
src/graphism/: CMakeLists.txt  imagesaver.cpp  render.cpp  textrender.cpp  triarrow.cpp  tricloud.cpp  tricube.cpp  tricylinder.cpp  trimap.cpp  triobj.cpp  trisphere.cpp
src/hist/: CMakeLists.txt  histcustommodes.cpp  histdata.cpp  histdatadtset.cpp  histdatagsr.cpp  histdataheff.cpp  histdatamd.cpp  histdatanc.cpp  histdataoutnc.cpp  histdatapolydtset.cpp  histdataxyz.cpp  multibinit.cpp  vaspxml.cpp
src/io/: CMakeLists.txt  abibin.cpp  abihdr.cpp  cifparser.cpp  configparser.cpp  ddb.cpp  ddbabinit.cpp  ddboutcar.cpp  ddbphonopy.cpp  dtset.cpp  eigparser.cpp  eigparsereig.cpp  eigparserelectrons.cpp  eigparserfatbands.cpp  eigparsergsr.cpp  eigparserphbst.cpp  eigparserphfrq.cpp  eigparserphonons.cpp  eigparserphonopy.cpp  electrondos.cpp  etsfnc.cpp  outcar.cpp  parser.cpp  phonopydtset.cpp  poscar.cpp  procar.cpp
src/phonons/: CMakeLists.txt  dispdb.cpp  phononmode.cpp  supercell.cpp
src/plot/: CMakeLists.txt  dosdb.cpp  gnuplot.cpp  graph.cpp
src/qtgui/: atomselector.cpp  dialog.cpp  dialog.ui  glwidget.cpp  planselector.cpp  plotbar.cpp  qcustomplot.cpp  qplot.cpp  tabcanvaspos.cpp  tabnavtools.cpp  tabwingl.cpp  timeline.cpp  viewbar.cpp  winqt.cpp
src/shape/: CMakeLists.txt  octaangles.cpp  octahedra.cpp  octalengths.cpp
src/window/: CMakeLists.txt  window.cpp  winfake.cpp  winglfw2.cpp  winglfw3.cpp
test/: H2O_plot.h  SRO_phonons.h  SRO_plot.h  YNO_phonons.h  ddb_bfo.h  ddb_crooh.h  ddb_failures.h  ddb_outcar.h  ddb_pto.h  ddb_wo3p21c.h  ddb_ygo.h  dtset_strain.h  fraction_conversion.h  fraction_static.h  geometry_mat3d.h  histcustommodes_phonons.h  histcustommodes_strain.h  histcustomodes_strain.h  mapping_supercell.h  multibinit_thermalpop.h  parser_input.h  supercell_basic.h  utils_strings.h
test/files/: BFO_DDB.hxx  CTO_444_mapping.hxx  CTO_DDB.hxx  CTO_Pnma.hxx  CrOOH_DDB  CrOOH_DDB.hxx  H2O_HIST_MSD.hxx  H2O_HIST_PDF.hxx  H2O_HIST_angle.hxx  H2O_HIST_angle_269_77_333.hxx  H2O_HIST_distance_9_265.hxx  H2O_HIST_latticeLengths.hxx  H2O_HIST_pressure.hxx  H2O_HIST_temperature.hxx  H2O_HIST_volume.hxx  OUTCAR.hxx  OUTCAR1.hxx  OUTCAR2.hxx  OUTCAR3.hxx  OUTCAR4.hxx  OUTCAR5.hxx  OUTCAR_STO.hxx  PTO_DDB.hxx  PTO_supercell_HIST.hxx  SRO_222.hxx  SRO_222_mapping.hxx  SRO_DDB.hxx  SRO_HIST_Analysis.hxx  SRO_HIST_Analysis_fullnormalized.hxx  SRO_HIST_Analysis_gamma.hxx  SRO_HIST_MSD.hxx  SRO_HIST_PDF.hxx  SRO_HIST_pressure.hxx  SRO_HIST_pumped.hxx  SRO_HIST_qpt.hxx  SRO_HIST_strain.hxx  SRO_HIST_temperature.hxx  SRO_HIST_volume.hxx  Supercell124.hxx  Supercell222.hxx  (+14 more)
